--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -38,7 +38,7 @@
     <div th:if="${!paging.isEmpty()}">
         <ul class="pagination justify-content-center">
             <li class="page-item" th:classappend="${!paging.hasPrevious} ? 'disabled'">
-                <a class="page-link" href="javascript:void(0)" th:data-page="${paging.number-1}">
+                <a class="page-link" href="javascript:void(0)" th:data-page="${paging.number - 1}">
                     <span>이전</span>
                 </a>
             </li>
@@ -49,7 +49,7 @@
                 <a th:text="${page}" class="page-link" href="javascript:void(0)" th:data-page="${page}"></a>
             </li>
             <li class="page-item" th:classappend="${!paging.hasNext} ? 'disabled'">
-                <a class="page-link" href="javascript:void(0)" th:data-page="${paging.number+1}">
+                <a class="page-link" href="javascript:void(0)" th:data-page="${paging.number + 1}">
                     <span>다음</span>
                 </a>
             </li>
@@ -57,7 +57,7 @@
     </div>
     <!-- 페이징처리 끝 -->
     <form th:action="@{/question/list}" method="get" id="searchForm">
-        <input type="hidden" id="kw" name="kw" th:value="${kw}">
+        <input type="hidden"  id="kw" name="kw" th:value="${kw}">
         <input type="hidden" id="page" name="page" th:value="${paging.number}">
     </form>
 </div>
@@ -66,7 +66,6 @@
     Array.from(page_elements).forEach(function(element) {
         element.addEventListener('click', function() {
             document.getElementById('page').value = this.dataset.page;
-            document.getElementById('kw').value = window.location.href.split('kw=')[1].split('&')[0];
             document.getElementById('searchForm').submit();
         });
     });
